--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -67,3 +67,13 @@
 }
 
 
+.content{
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  border-top-right-radius : 100px;
+  border-top-left-radius : 100px;
+  margin-top: 20px;
+  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+}
+
