--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -14,15 +14,16 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .App {
   width: 70w;
-  height: 100vh;
+  height: fit-content;
   border-radius: 10px;
   margin-top: 2vh;
   background-color: white;
-  
+ 
 }
 
 
@@ -74,14 +75,22 @@ body{
   color: #7493DE;
 }
 
+.centering{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
 
 .content{
   background-color: white;
-  width: 100%;
+  width: 95%;
   height: 100%;
   border-top-right-radius : 100px;
   border-top-left-radius : 100px;
   margin-top: 20px;
   box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+  
 }
 
